# ONAT

./: .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  a.out  imgui.ini
.cache/clangd/index/: audio.cpp.449655E542098A12.idx  audio.cpp.9B3DA404FD78243A.idx  audio.hpp.86B6B896C488BC01.idx  audio.hpp.D548EF7F060B98E2.idx  beastie.cpp.EB3B6B6C2109F427.idx  enums.cpp.31CFC9283F08A1FF.idx  enums.cpp.D2757479351622F8.idx  enums.hpp.3E65B054CE53A71E.idx  enums.hpp.7C45381E4060D509.idx  gang.cpp.04952F7E2BB1179B.idx  golden_tux.cpp.64CAD249651CA12A.idx  gopher.cpp.5B898153BC57BB8E.idx  jumpscares.cpp.5D1E2BFB2446AB72.idx  jumpscares.hpp.FBF932DD48B244AE.idx  macros.cpp.DA9C76EDE4A8FC32.idx  macros.hpp.0AB420B102EC6EE2.idx  main.cpp.27724666BFB9DDB6.idx  monster.cpp.43BDA95597C08BBD.idx  monster.hpp.2E1B748AA3B95BD0.idx  monster.hpp.653131142B4B4D3F.idx  nolok.cpp.6D9E7EF7A0EE8D05.idx  penny.cpp.F309A38717403331.idx  room.cpp.C7F8DD011AA84A44.idx  screen.cpp.C9F5B73BC681240C.idx  screen.hpp.067901028B3BE4F7.idx  state.cpp.36169764641247FD.idx  state.cpp.3FFE95FC75DECC2C.idx  state.hpp.529A23452FFDE1A3.idx  textures.cpp.D67BB33D7F0CED3E.idx  textures.hpp.06EBB99B4210EECE.idx  textures.hpp.61286D4EF18C2EF1.idx  tux.cpp.53033C47B548BA68.idx  utils.cpp.AD8AA5960AF60D12.idx  utils.hpp.F28D0542E2B1F338.idx  wilbur.cpp.1E7F494DCE8CD9A1.idx
assets/: metal_door.m4a
assets/gopher/: .~lock.Untitled document.docx#  Untitled document.docx
audio/: .gitignore  bells.flac
proc/: Cargo.toml  lib.rs
src/: audio.rs  config.rs  enums.rs  jumpscares.rs  macros.rs  main.cpp  main.rs  monster.rs  state.rs  textures.rs  utils.cpp  utils.hpp
src/core/: audio.cpp  audio.hpp  screen.cpp  screen.hpp
src/game/: enums.cpp  enums.hpp  state.cpp  state.hpp
src/monster/: beastie.rs  gogopher.rs  golden_tux.rs  mod.rs  nolok.rs  penny.rs  tux.rs  wilber.rs
src/monsters/: beastie.cpp  gang.cpp  golden_tux.cpp  gopher.cpp  monster.hpp  nolok.cpp  penny.cpp  tux.cpp  wilbur.cpp
src/shader/: crt.fs  laptop.fs
src/state/: camera.rs  camera_rebooting.rs  credits.rs  debug.rs  game_over.rs  general_ui.rs  mikepong.rs  mod.rs  office.rs  settings.rs  title_screen.rs  you_win.rs
src/textures/: textures.hpp
tts/: bonzi.json
windows_dlls/: README.md
