[package]
name = "onat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { path = "./raylib-rs/raylib", features = ["imgui"] }
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
rand = "0.8.5"
proc = { path = "./proc" }
once_cell = "1.18.0"
parking_lot = "0.12.1"
getrandom = { version = "0.2.11", features = ["js"] }
dialog = "0.3.0"
error-window = "1.0.0"
flate2 = "1.0.28"
sdl2 = { version = "0.37.0", features = ["mixer"] }
imgui = "0.12.0"

[features]
default = []
no_camera_timer = []
beastie_always_move = []
[package.metadata.appimage]
auto_link = true

[profile.release]
strip = true
lto = true

[profile.release.package.proc]
features = ["release"]
